after successful login we can see loading gif and after that responsive table (no habitants yt)

--- a/templates/api-wars.html
+++ b/templates/api-wars.html
@@ -20,6 +20,7 @@
   <script src="static/js/register.js"></script>
   <script src="static/js/ajax.js"></script>
   <script src="static/js/logic.js"></script>
+  <script src="static/js/planets.js"></script>
   <script src="static/js/init.js"></script>
 
 
