--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,8 +1,10 @@
-html
+/* html
 {
     height: 100vh;
     width: 100vh;
-}
+}  */
+
+/* JA PIERDOLE */
 
 body
 {
@@ -15,6 +17,8 @@ body
     width: 100%;
     padding: 0;
     margin: 0;
+    display: inline;
+    justify-content: center;
 }
 
 .wrap
@@ -31,8 +35,8 @@ body
     /* position of login form */
 }
 
-p.form-title
-{
+
+.three-upper-p p{
     font-family: 'Open Sans' , sans-serif;
     font-size: 20px;
     font-weight: 600;
@@ -43,6 +47,7 @@ p.form-title
     margin-right: 5px;
     text-transform: uppercase;
     letter-spacing: 4px;
+    display: inline;
 }
 
 #register-loginDOM{
@@ -63,13 +68,9 @@ p.form-title
     cursor: pointer;
 }
 
-p {
-    display: inline;
-}
-
 .login-register
 {
-    width: 250px;
+    width: 280px;
     margin: 0 auto; 
     /* width of login form */
 }
@@ -110,8 +111,60 @@ p {
     font-weight: 400;
     color: #FFFFFF;
 }
+/* 
+#table-container{
+    width: 100%;;
+}
+
+.table {
+    display: block !important;
+ } 
+  */
 
 
 
+
+.row{
+    display: table-row;
+}
+
+.row:hover{
+    opacity: 0.9;
+    box-shadow: 0px 0px 40px 10px red;
+    margin: auto;
+}
+
+#table-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+}
+
+table{
+    opacity: 0.95;
+    margin: 5%;
+    /* margin-top: 5%;
+    margin-left: 5%;
+    margin-right: 5%; */
+    box-shadow: 0px 0px 40px 10px red;
+    display: inline-table;
+}
+
+/* table{
+    border-collapse: separate;
+    border-spacing: 0px 10px;
+} */
+
+#awaiting-gif-container{
+    position: absolute;
+    right: 40%;
+    top: 40%;
+}
+
+#awaiting-gif{
+
+}
 
 
