--- a/static/css/login.css
+++ b/static/css/login.css
@@ -174,3 +174,56 @@ table{
 .modal-open {
     overflow: auto;
 }
+
+@media (min-width: 768px) {
+    .modal-xl {
+    width: 80%;
+    max-width:1000px;
+    }
+}
+
+
+.modal-body{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+}
+
+.modal-body table {
+    width: 90%;
+    margin: 3%;
+}
+
+#navbar .navbar-brand, #navbar .nav-link{
+    color: #FFFFFF;
+}
+
+.navbar>.container-fluid{
+    justify-content: initial;
+}
+
+#navbar-buttons {
+    display: inline-flex;
+}
+
+#navbar-buttons button {
+    margin-right: 10px;
+}
+
+#navbar .nav-link{
+    padding: 0px;
+    margin-right: 10px;
+
+}
+
+/* #navbar{
+    width: 100%;
+} */
+
+/* 
+#signed-user{
+    float: right;
+} */
+
