--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,11 +1,3 @@
-/* html
-{
-    height: 100vh;
-    width: 100vh;
-}  */
-
-/* JA PIERDOLE */
-
 body
 {
     background: url('http://38.media.tumblr.com/9dbe889c08c607b24a3bcc7d35097c67/tumblr_nqev1jqvBb1u431g7o1_1280.gif');
@@ -111,28 +103,19 @@ body
     font-weight: 400;
     color: #FFFFFF;
 }
-/* 
-#table-container{
-    width: 100%;;
-}
-
-.table {
-    display: block !important;
- } 
-  */
-
-
 
 
 .row{
     display: table-row;
 }
 
+
 .row:hover{
     opacity: 0.9;
     box-shadow: 0px 0px 40px 10px red;
     margin: auto;
 }
+
 
 #table-container{
     width: 100%;
@@ -142,20 +125,15 @@ body
     align-self: center;
 }
 
+
 table{
     opacity: 0.95;
     margin: 5%;
-    /* margin-top: 5%;
-    margin-left: 5%;
-    margin-right: 5%; */
+    margin-top: 2%;
     box-shadow: 0px 0px 40px 10px red;
     display: inline-table;
 }
 
-/* table{
-    border-collapse: separate;
-    border-spacing: 0px 10px;
-} */
 
 #awaiting-gif-container{
     position: absolute;
@@ -163,9 +141,6 @@ table{
     top: 40%;
 }
 
-#awaiting-gif{
-
-}
 
 .modal-open .modal-backdrop { 
     z-index: 0; 
@@ -217,13 +192,4 @@ table{
     margin-right: 10px;
 
 }
-
-/* #navbar{
-    width: 100%;
-} */
-
-/* 
-#signed-user{
-    float: right;
-} */
 
